  matrices when sampling has completed. 
- Make use of Parameter argument consistent across several methods, where Param
  and Which were used before.
- Extended BASiCS_DiagPlot to enable other diagnostic measures
- Moved to store molecule counts in `rowData(altExp(sce))` rather than `metadata(sce)`
- Remove dependency to KernSmooth
- Set some values to NA if they relate to genes captured in < 2 cells
- Add option to exclude spike-ins in `BASiCS_DenoisedCounts`.
  Also use a slightly more principled calculation internally.
- See issues #182, #39, #91, #169, #181, #178, #202, #190, #173


version 2.1.8 (2020-09-28)
- Minor edit in the vignette to recommend the use of a seed for reproducible
results when using `BASiCS_MCMC`. 


version 2.1.9 (2020-09-28)
- Add `Threads` argument to `BASiCS_MCMC`, allowing parallelisation of MCMC 
  updates across cells or genes using openMP.
- Reduce BatchInfo requirement for no spikes sampler to a warning, from an 
  error.

version 2.1.10 (2020-09-30)
- Documents `Threads` argument.

version 2.1.11 (2020-09-30)
- Updated documentation for `Threads` in `BASiCS_MCMC` to indicate default value. 

version 2.1.12 (2020-10-01)
- Remove unused DelayedArray call from tests

version 2.1.13 (2020-10-05)
- Add PriorParam argument to `BASiCS_MCMC`

version 2.1.14 (2020-10-08)
- Add support for divide and conquer inference with `BASiCS_DivideAndConquer`
  function. Add support for this function to `BASiCS_MCMC`
- Add `BASiCS_MockSCE` function to create a SingleCellExperiment 
  object with arbitrary dimensions.
- Fix Makevars warning relating to PKG_CXXFLAGS

version 2.1.16 (2020-10-22)
- Updates `.BASiCS_MCMC_Start` to use different starting values when an 
empirical Bayes prior is assigned to mu
- Adds `log_scale` parameter to  `.EmpiricalBayesMu`
- Fixes small bug in `.BASiCS_MCMC_Start`
- Updates unit tests linked to the change in `.BASiCS_MCMC_Start`
- Adds fixed seeds to `test_divide_and_conquer.R`