@@ -270,6 +270,17 @@
 
   # Correction for those genes with total count = 0
   aux <- ifelse(aux == 0, min(aux[aux > 0]), aux)
+  
+  # Extra scaling if the data has spike-ins
+  if(length(altExpNames(Data)) > 0) {
+    # overall capture for spike-ins across a cell
+    s0 <- Matrix::colSums(assay(altExp(Data))) /
+      sum(rowData(altExp(Data))[, 2])  
+    # arbitrary scaling set to match the mode of the distribution of s0
+    s0_dens <- density(s0)
+    myscale <- s0_dens$x[s0_dens$y == max(s0_dens$y)]
+    aux <- aux / myscale
+  }
 
   if (log_scale) {
     log(aux) - s2_mu / 2
@@ -297,7 +308,7 @@
                                      WithSpikes = WithSpikes,
                                      Regression = Regression
                                    ),
-                                   mintol_mu = 1e-3,
+                                   mintol_mu = 1e-5,
                                    mintol_delta = 1e-3,
                                    mintol_nu = 1e-5,
                                    mintol_theta = 1e-4) {
